--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,6 @@ url = "^2.2"
 uuid = { version = "^1.0", features = ["serde"] }
 
 [dependencies.reqwest]
-version = "^0.11"
+version = "0.12"
 default-features = false
-features = ["json", "multipart", "rustls-tls", "trust-dns"]
+features = ["json", "multipart", "rustls-tls", "hickory-dns"]
